# AHN

./: .gitignore  HANDOFF.md  README.md  Spec-Driven Development.txt
.claude/: ARCHITECTURE.md  CLAUDE.md  settings.json  statusline.py
.claude/agents/: experiment-analyst.md  lab-implementer.md
.claude/rules/: docs-style.md  framework-vocab.md
.claude_hooks/: log_edit.py
documents/: 00-overview.md  01-the-problem.md  02-the-framework.md  03-the-hypothesis.md  04-implications.md  desk-check-prompt.md
lab/: .env.example  .gitignore  BUILDLOG.md  README.md  pyproject.toml
lab/.claude/: CLAUDE.md
lab/.claude/rules/: experiments.md  python-style.md
lab/.claude_hooks/: log_edit.py  session_start.py
lab/diagnostics/: diag_e2_memcheck.py  diag_temp0_slugify.py
lab/docs/: 00-intent.md  01-shared-requirements.md  ROADMAP.md  findings-E1.md  findings-E2.md  findings-E3.md  req-E1.md  req-E2.md  req-E2b.md  req-E3.md  req-E9.md
lab/experiments/E1/hidden/: summarize_hidden.py
lab/experiments/E1/subjects/is_prime/: contracts.py  intent.md
lab/experiments/E1/subjects/summarize/: contracts.py
lab/experiments/E2/subjects/normalize_tags/: contracts_D.py  intent.md
lab/lab/.claude_hooks/: log_edit.py
lab/src/ahnlab/: __init__.py  arms.py  cli.py  config.py  cycle_runner.py  experiments.py  harness.py  membrane.py  metrics.py  models.py  store.py
lab/tests/lab/: test_membrane.py  test_metrics.py  test_store.py
subjects/: README.md
subjects/group_by_prefix/: contracts_B.py  contracts_C.py  contracts_D.py  intent.md
subjects/invert_index/: contracts_B.py  (+3 more)
(+49 files in other folders)
