[project]
name = "ahnlab"
version = "0.1.0"
description = "Agentic Hierarchy of Needs experimentation lab"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "pydantic>=2.7",
  "duckdb>=1.0",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "pytest>=8.0",
  "pytest-json-report>=1.5",
]

[project.scripts]
ahnlab = "ahnlab.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
